# ads-code

./: pyproject.toml
data/: approved_mol_primary_keys.txt  approved_properties.parquet  compound_properties.csv  molecule_dictionary.csv
scripts/: approved_compounds.ipynb  autocorrelation.ipynb  explore.ipynb  lr.ipynb  pca.ipynb
src/: columns.py  funs.py  read.py
