[tool.poetry]
name = "ads-code"
version = "0.1.0"
description = ""
authors = ["Martijn Sturm <martijn.sturm@gmail.com>"]
readme = "README.md"
packages = [
    # { include = "ads_code" }, 
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.17.3"
statsmodels = "^0.13.5"
numpy = "^1.24.2"
plotly = "^5.14.1"
kaleido = "0.2.1"
pyarrow = "^11.0.0"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
